# QrScanner

./: .pre-commit-config.yaml  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  pyproject.toml  run-dev.sh  scanned.json
.github/workflows/: ci.yml
qrscanner/: camera.py  cli.py  core.py  scanned.json  web.py
qrscanner-web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
qrscanner-web/app/: globals.css  layout.tsx  page.tsx
qrscanner-web/app/upload/: page.tsx
qrscanner-web/tests/newman/: run.sh
qrscanner-web/tests/playwright/: basic.spec.ts
qrscanner-web/tests/postman/: qrscanner.postman_collection.json  qrscanner.postman_environment.json
qrscanner/test-backend/: test_api.py
